// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #f2f2f2;
  border-radius: 2px;
  color: #212121;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

<p
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  Hello world
</p>
`;

exports[`composition hook should return with Code props 1`] = `
Object {
  "className": "css-1qr1udv css-1pwrqjj css-3ekj6a fp-Box fp-Code",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #f2f2f2;
  border-radius: 2px;
  color: #212121;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #f2f2f2;
  border-radius: 2px;
  color: #212121;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

<code
  class="emotion-0 emotion-1 emotion-2 test fp-Box fp-Code"
>
  hello world
</code>
`;

exports[`defaultProps should render correctly for palette 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #ebe8fd;
  border-radius: 2px;
  color: #2617a5;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

<code
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  hello world
</code>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #f2f2f2;
  border-radius: 2px;
  color: #212121;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

<code
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  Hello world
</code>
`;

exports[`props should render correctly as a block 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #f2f2f2;
  border-radius: 2px;
  color: #212121;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

.emotion-0 {
  padding: 1rem;
}

<pre
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  Hello world
</pre>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #f2f2f2;
  border-radius: 2px;
  color: #212121;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

.emotion-2 {
  color: #3722ed !important;
}

<code
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  Hello world
</code>
`;

exports[`props should render correctly with palette 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #ebe8fd;
  border-radius: 2px;
  color: #2617a5;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

<code
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  Hello world
</code>
`;

exports[`theming Code.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  background-color: #f2f2f2;
  border-radius: 2px;
  color: #212121;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
  padding: 0.1rem 0.2rem;
}

.emotion-0 {
  background-color: red;
}

<code
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Code"
>
  hello world
</code>
`;
